--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,6 +2,12 @@ app.title=Подсчет калорий
 app.home=Главная
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+common.select=Выбрать
+common.filter=Фильтровать
+common.save=Сохранить
+common.cancel=Отмена
+common.update=Изменить
+common.delete=Удалить
 user.title=Пользователи
 user.name=Имя
 user.email=Почта
@@ -9,4 +15,14 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
-common.select=Выбрать
+meal.fromDate=Начальная дата (включительно)
+meal.toDate=Конечная дата (включительно)
+meal.fromTime=Начальное время (включительно)
+meal.toTime=Конечное время (не включительно)
+meal.addMeal=Добавить еду
+meal.dateTime=Дата и время
+meal.date=Дата
+meal.description=Описание
+meal.calories=Калории
+meal.new=Добавление новой еды
+meal.edit=Изменение еды
